# freshservice-mcp

./: .gitignore  README.md  install.sh  pyproject.toml
src/freshservice_mcp/: __init__.py  client.py  server.py
tests/: conftest.py  test_assets.py  test_changes.py  test_client.py  test_conversations.py  test_knowledge_base.py  test_misc.py  test_people.py  test_tickets.py
